# jobhopper

./: .gitignore  README.md  jobhopper.example.yaml  pyproject.toml
examples/: run_job.template.sh
src/jobhopper/: __init__.py  app_logging.py  cli.py  config.py  dispatcher.py  models.py  remote.py  store.py  utils.py
tests/: test_cli.py  test_config.py  test_dispatcher.py  test_store.py  test_utils.py
